fixing spacing on mobile

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ h1 {
   #game {
     width: 100%;
     position: absolute;
-    left: 1%;
+    left: 2%;
   }
   #game div {
     border: 1px solid black;
@@ -95,7 +95,7 @@ h1 {
     background-size: 100% 100%;
     width: 143px;
     height: 200px;
-    margin: 50px 20px;
+    margin: 50px 10px;
     padding: 25px 20px;
     display: inline-block;
     transition: all 0.2s ease-out;
